[package]
name = "transpher"
version = "0.1.0"
authors = ["Mark Nijboer <mark@nijboer.email>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"clap" = "2.33.0"
"hex" = "0.4.0"
rust-crypto = "0.2.36"
aes-gcm = "0.3.0"
aead = "0.2.0"
rand = "0.7"
safemem = "0.3.3"