[package]
name = "transpher"
version = "0.1.0"
authors = ["Mark Nijboer <mark@nijboer.email>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
debug-assertions = false
debug = false
rpath = false
panic = "abort"

[dependencies]
clap = "2.33.1"
hex = "0.4.2"
rust-crypto = "0.2.36"
aes-gcm = "0.6.0"
aead = "0.3.2"
rand = "0.7"
safemem = "0.3.3"